--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,35 @@
 .App {
+    padding: 0 10px 0 10px;
+}
+
+.search-bar {
+    margin: 20px;
+    text-align: center;
+}
+
+.search-bar input {
+    width: 75%;
+}
+
+.video-row {
     display: flex;
+
+}
+
+.video-detail {
+    padding: 10px;
+    border: solid 1px #ddd;
+    border-radius: 5px;
+}
+
+.video-detail {
+    padding: 5px;
+}
+
+.list-group-item {
+    cursor: pointer;
+}
+
+.list-group-item:hover {
+    background: gray;
 }
